2008-03-20  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1920854:
    * source/org/jfree/chart/plot/PiePlot3D.java
    (draw): Move label drawing outside section loop.

2008-03-19  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1902418:
    * source/org/jfree/chart/axis/LogAxis.java
    (refreshTicksVertical): Change tick type for major tick labels.

2008-03-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/PiePlot3D.java
    (getMaximumExplodePercent): Check for null dataset,
    (initialise): Likewise,
    * tests/org/jfree/chart/plot/junit/PiePlot3DTests.java
    (testDrawWithNullDataset): New test method.

2008-02-26  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1901599:
    * experimental/org/jfree/chart/annotations/XYTitleAnnotation.java
    (draw): Check for null 'info' argument before adding entities,
    (hashCode): Reimplemented,
    * experimental/org/jfree/chart/annotations/junit/XYTitleAnnotationTests.java
    (testDrawWithNullInfo): New test.

2008-02-26  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1897580:
    * source/org/jfree/data/DefaultIntervalCategoryDataset.java
    (DefaultIntervalCategoryDataset(Comparable[], Comparable[], Number[][], 
    Number[][]): Initialise seriesKeys and categoryKeys to empty arrays instead
    of null for empty dataset,
    (setCategoryKeys): Fixed argument check to handle empty dataset.

2008-02-19  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/util/LogFormat.java
    (powerLabel): New field,
    (LogFormat(double, String, boolean)): Delegate to new constructor,
    (LogFormat(double, String, String, boolean)): New constructor,
    (format): Use new powerLabel,
    (equals): New method override,
    (clone): Likewise.

2008-02-18  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 1880114:
    * org/jfree/chart/renderer/xy/VectorRenderer.java